--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             color: white;
             font-family: Arial, Helvetica, sans-serif;
             height: 200px;
+            min-height: 200px;
             width: 100%;
             text-align: center;
         }
@@ -185,7 +186,6 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Notícias</a></li>
-                <li><a href="#">Curiosidades</a></li>
                 <li><a href="#">Fale Conosco</a></li>
             </ul>
         </nav>
