--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 
                 <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
                 <picture>
-                    <source media="(min-width:880px )" srcset="imagens\dan-droids.png">
-                    <source media="(min-width:400px )" srcset="imagens\dan-droids-pq.png">
+                    <source media="(min-width:880px )" srcset="imagens/dan-droids.png">
+                    <source media="(min-width:400px )" srcset="imagens/dan-droids-pq.png">
                     <img src="imagens/dan-droids.png" alt="mascote">
                 </picture>
                 <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
@@ -212,8 +212,8 @@
                 <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
                 <picture>
-                    <source media="(min-width: 880px )" srcset="imagens\irina-blok.jpg">
-                    <source media="(min-width: 400px )" srcset="imagens\irina-blok-pq.jpg">
+                    <source media="(min-width: 880px )" srcset="imagens/irina-blok.jpg">
+                    <source media="(min-width: 400px )" srcset="imagens/irina-blok-pq.jpg">
                     <img src="imagens/irina-blok.jpg" alt="Irina Block">
                 </picture>
 
